--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-test1
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel ="stylesheet" href="css/style.css">
+  <title>Todoリスト</title>
+</head>
+<body>
+  <h1>Todoリスト</h1>
+  <p>
+    <input type="radio" name="status" value="1" checked="checked">全て
+    <input type="radio" name="status" value="2">作業中
+    <input type="radio" name="status" value="3">完了
+    </p>
+<p></p>
+    <table>
+      <thead>
+        <th>ID</th>
+        <th>コメント</th>
+        <th>状態</th>
+        <th></th>
+      </thead>
+      <tbody class ="addTask-target"></tbody>
+    </table>
+    <h2>新規タスクの追加</h2>
+    <input class="addTask-value" type="text" />
+    <button class="addTask-trigger" type="button">追加</button>
+  <script src="js/main.js"></script>
+</body>
+
+</script>
+</html>
